--- a/components/datepicker/src/styles/style-auro-calendar-cell.scss
+++ b/components/datepicker/src/styles/style-auro-calendar-cell.scss
@@ -3,9 +3,9 @@
 
 // // ---------------------------------------------------------------------
 
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints' as vb;
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
 /* stylelint-disable selector-max-class, order/properties-order, declaration-empty-line-before, scss/selector-nest-combinators,
    selector-pseudo-element-colon-notation, max-nesting-depth, at-rule-empty-line-before, no-descending-specificity, declaration-no-important */
@@ -18,14 +18,14 @@
 
   display: block;
   width: calc(100vw / 7);
-  height: var(--ds-size-600, $ds-size-600);
+  height: var(--ds-size-600, vac.$ds-size-600);
 
   content: '';
   transform: translate(-50%, -50%);
 }
 
 :host {
-  @include auro_breakpoint($max: $ds-grid-breakpoint-sm) {
+  @include vb.auro_breakpoint($max: vac.$ds-grid-breakpoint-sm) {
     display: flex;
     justify-content: center;
   }
@@ -34,21 +34,21 @@
 .day {
   position: relative;
 
-  width: var(--ds-size-500, $ds-size-500);
-  height: calc(var(--ds-size-700, $ds-size-700) - 2px);
+  width: var(--ds-size-500, vac.$ds-size-500);
+  height: calc(var(--ds-size-700, vac.$ds-size-700) - 2px);
 
   padding: 0;
 
   border-width: 1px;
   border-style: solid;
-  border-radius: var(--ds-size-300, $ds-size-300);
+  border-radius: var(--ds-size-300, vac.$ds-size-300);
 
   cursor: pointer;
 
-  font-size: var(--ds-basic-text-body-default-font-size, $ds-basic-text-body-default-font-size); /* This must be declared here because the browser clients unset it in the user agent style sheet */
-  font-weight: var(--ds-basic-text-body-default-font-weight, $ds-basic-text-body-default-font-weight); /* This must be declared here because the browser clients unset it in the user agent style sheet */
-  letter-spacing: var(--ds-basic-text-body-default-letter-spacing, $ds-basic-text-body-default-letter-spacing); /* This must be declared here because the browser clients unset it in the user agent style sheet */
-  line-height: var(--ds-basic-text-body-default-line-height, $ds-basic-text-body-default-line-height); /* This must be declared here because the browser clients unset it in the user agent style sheet */
+  font-size: 16px; // var(--ds-basic-text-body-default-font-size, v.$ds-basic-text-body-default-font-size); /* This must be declared here because the browser clients unset it in the user agent style sheet */
+  font-weight: 450; // var(--ds-basic-text-body-default-font-weight, v.$ds-basic-text-body-default-font-weight); /* This must be declared here because the browser clients unset it in the user agent style sheet */
+  letter-spacing: 0; // var(--ds-basic-text-body-default-letter-spacing, v.$ds-basic-text-body-default-letter-spacing); /* This must be declared here because the browser clients unset it in the user agent style sheet */
+  line-height: 24px; // var(--ds-basic-text-body-default-line-height, v.$ds-basic-text-body-default-line-height); /* This must be declared here because the browser clients unset it in the user agent style sheet */
 
   user-select: none;
 
@@ -59,8 +59,8 @@
   &.inRange::before {
     @include in-range-pseudo-elem;
 
-    @include auro_grid-breakpoint--sm {
-      width: var(--ds-size-600, $ds-size-600);
+    @include vb.auro_grid-breakpoint--sm {
+      width: var(--ds-size-600, vac.$ds-size-600);
     }
   }
 
@@ -72,8 +72,8 @@
 
       transform: translate(0%, -50%);
 
-      @include auro_grid-breakpoint--sm {
-        width: calc(var(--ds-size-600, $ds-size-600) / 2);
+      @include vb.auro_grid-breakpoint--sm {
+        width: calc(var(--ds-size-600, vac.$ds-size-600) / 2);
       }
     }
   }
@@ -86,8 +86,8 @@
 
     transform: translate(-100%, -50%);
 
-    @include auro_grid-breakpoint--sm {
-      width: calc(var(--ds-size-600, $ds-size-600) / 2);
+    @include vb.auro_grid-breakpoint--sm {
+      width: calc(var(--ds-size-600, vac.$ds-size-600) / 2);
     }
   }
 }
@@ -96,10 +96,10 @@
   display: flex;
   flex-direction: column;
 
-  font-size: var(--ds-basic-text-body-xxs-font-size, $ds-basic-text-body-xxs-font-size);
-  font-weight :var(--ds-basic-text-body-xxs-font-weight, $ds-basic-text-body-xxs-font-weight);
-  letter-spacing: var(--ds-basic-text-body-xxs-letter-spacing, $ds-basic-text-body-xxs-letter-spacing);
-  line-height: var(--ds-basic-text-body-xxs-line-height, $ds-basic-text-body-xxs-line-height);
+  font-size: 10px; // var(--ds-basic-text-body-xxs-font-size, v.$ds-basic-text-body-xxs-font-size);
+  font-weight: 450; // var(--ds-basic-text-body-xxs-font-weight, v.$ds-basic-text-body-xxs-font-weight);
+  letter-spacing: 0; // var(--ds-basic-text-body-xxs-letter-spacing, v.$ds-basic-text-body-xxs-letter-spacing);
+  line-height: 14px; // var(--ds-basic-text-body-xxs-line-height, v.$ds-basic-text-body-xxs-line-height);
 }
 
 ::slotted([slot^="date_"]) {
@@ -135,16 +135,15 @@
   }
 }
 
-@include auro_grid-breakpoint--sm {
+@include vb.auro_grid-breakpoint--sm {
   .day {
-    width: var(--ds-size-600, $ds-size-600);
-    height: var(--ds-size-800, $ds-size-800);
+    width: var(--ds-size-600, vac.$ds-size-600);
+    height: var(--ds-size-800, vac.$ds-size-800);
 
-    font-family: var(--ds-basic-text-body-lg-font-family, $ds-basic-text-body-lg-font-family);
-    font-size: var(--ds-basic-text-body-lg-font-size, $ds-basic-text-body-lg-font-size);
-    font-weight :var(--ds-basic-text-body-lg-font-weight, $ds-basic-text-body-lg-font-weight);
-    letter-spacing: var(--ds-basic-text-body-lg-letter-spacing, $ds-basic-text-body-lg-letter-spacing);
-    line-height: var(--ds-basic-text-body-lg-line-height, $ds-basic-text-body-lg-line-height);
+    font-size: 18px; // var(--ds-basic-text-body-lg-font-size, v.$ds-basic-text-body-lg-font-size);
+    font-weight: 450; // var(--ds-basic-text-body-lg-font-weight, v.$ds-basic-text-body-lg-font-weight);
+    letter-spacing: 0; // var(--ds-basic-text-body-lg-letter-spacing, v.$ds-basic-text-body-lg-letter-spacing);
+    line-height: 26px; // var(--ds-basic-text-body-lg-line-height, v.$ds-basic-text-body-lg-line-height);
 
     &:hover {
       cursor: pointer;
@@ -152,9 +151,9 @@
   }
 
   .dateSlot {
-    font-size: var(--ds-basic-text-body-xs-font-size, $ds-basic-text-body-xs-font-size);
-    font-weight :var(--ds-basic-text-body-xs-font-weight, $ds-basic-text-body-xs-font-weight);
-    letter-spacing: var(--ds-basic-text-body-xs-letter-spacing, $ds-basic-text-body-xs-letter-spacing);
-    line-height: var(--ds-basic-text-body-xs-line-height, $ds-basic-text-body-xs-line-height);
+    font-size: 12px; // var(--ds-basic-text-body-xs-font-size, v.$ds-basic-text-body-xs-font-size);
+    font-weight: 450; // var(--ds-basic-text-body-xs-font-weight, v.$ds-basic-text-body-xs-font-weight);
+    letter-spacing: 0; // var(--ds-basic-text-body-xs-letter-spacing, v.$ds-basic-text-body-xs-letter-spacing);
+    line-height: 16px; // var(--ds-basic-text-body-xs-line-height, v.$ds-basic-text-body-xs-line-height);
   }
 }
