--- a/components/dropdown/src/styles/emphasized/style.scss
+++ b/components/dropdown/src/styles/emphasized/style.scss
@@ -8,9 +8,9 @@
 
 // Support for fallback values
 
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 /* stylelint-disable no-descending-specificity, selector-max-attribute, selector-max-class, selector-class-pattern, selector-not-notation */
 
@@ -24,7 +24,7 @@
 .layout-emphasized-left,
 .layout-emphasized-right {
   .chevron {
-    margin-right: var(--ds-size-300, $ds-size-300);
+    margin-right: var(--ds-size-300, vac.$ds-size-300);
   }
 }
 
@@ -64,21 +64,21 @@
 
 :host([layout*='emphasized'][shape*='pill']:not([layout*='right'])) {
   .leftIndent {
-    width: calc(100% - var(--ds-size-300, $ds-size-300));
-    margin-left: var(--ds-size-300, $ds-size-300);
+    width: calc(100% - var(--ds-size-300, vac.$ds-size-300));
+    margin-left: var(--ds-size-300, vac.$ds-size-300);
   }
 }
 
 :host([layout*='emphasized'][shape*='pill']:not([layout*='left'])) {
   .rightIndent {
-    width: calc(100% - var(--ds-size-300, $ds-size-300));
-    margin-right: var(--ds-size-300, $ds-size-300);
+    width: calc(100% - var(--ds-size-300, vac.$ds-size-300));
+    margin-right: var(--ds-size-300, vac.$ds-size-300);
   }
 }
 
 :host([layout*='emphasized'][shape*='pill']:not([layout*='left']):not([layout*='right'])) {
   .rightIndent {
-    width: calc(100% - var(--ds-size-600, $ds-size-600));
-    margin-right: var(--ds-size-300, $ds-size-300);
+    width: calc(100% - var(--ds-size-600, vac.$ds-size-600));
+    margin-right: var(--ds-size-300, vac.$ds-size-300);
   }
 }
