--- a/components/helptext/src/styles/tokens.scss
+++ b/components/helptext/src/styles/tokens.scss
@@ -1,5 +1,5 @@
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 
 :host {
-  --ds-auro-helptext-color: var(--ds-basic-color-texticon-muted, #{$ds-basic-color-texticon-muted});
+  --ds-auro-helptext-color: var(--ds-basic-color-texticon-muted, #{v.$ds-basic-color-texticon-muted});
 }
