--- a/components/checkbox/src/styles/auro-checkbox.scss
+++ b/components/checkbox/src/styles/auro-checkbox.scss
@@ -19,16 +19,16 @@
    declaration-empty-line-before */
 
 // Import Auro tokens
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
-@import "@aurodesignsystem/webcorestylesheets/src/breakpoints";
-@import "@aurodesignsystem/webcorestylesheets/src/core";
-@import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+@use "@aurodesignsystem/webcorestylesheets/src/breakpoints" as vb;
+@use "@aurodesignsystem/webcorestylesheets/src/core";
+@use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
 // container styles - defines the look of the outer custom component
 :host {
   display: block;
-  margin-bottom: var(--ds-size-100, $ds-size-100);
+  --cbxLocation: var(--ds-size-50, #{vac.$ds-size-50});
 }
 
 fieldset {
@@ -37,7 +37,7 @@ fieldset {
 
 .displayFlex {
   slot {
-    @include auro_grid-breakpoint--sm {
+    @include vb.auro_grid-breakpoint--sm {
       display: flex;
     }
   }
@@ -45,17 +45,9 @@ fieldset {
 
 .cbxContainer {
   position: relative;
-  display: flex;
-  flex-direction: row;
-  padding-left: var(--ds-size-100, $ds-size-100);
-  padding-right: var(--ds-size-100, $ds-size-100);
-}
-
-.inputContainer {
-  display: block;
-  width: 24px;
-  height: 24px;  
-  margin-right: var(--ds-size-50, $ds-size-50);
+  padding-left: var(--ds-size-100, #{vac.$ds-size-100});
+  padding-right: var(--ds-size-100, #{vac.$ds-size-100});
+  line-height: var(--ds-size-400, #{vac.$ds-size-400});
 }
 
 .cbx--input {
@@ -69,9 +61,8 @@ fieldset {
 }
 
 .label {
-  flex: 1;
-  display: flex;
-  pointer-events: none;
+  margin-left: var(--ds-size-300, #{vac.$ds-size-300});
+  display: block;
 
   &:hover {
     cursor: pointer;
@@ -93,7 +84,7 @@ fieldset {
 
     border-width: 1px;
     border-style: solid;
-    border-radius: var(--ds-border-radius, $ds-border-radius);
+    border-radius: var(--ds-border-radius, #{vac.$ds-border-radius});
     outline-style: solid;
     outline-width: 1px;
     z-index: 0;
@@ -102,8 +93,12 @@ fieldset {
 
 .svg--cbx {
   position: absolute;
-  left: -1px;
-  top: -1px;
+  top: var(--ds-size-25, #{vac.$ds-size-25});
+  left: var(--ds-size-25, #{vac.$ds-size-25});
+
+  padding-top: 3px;
+  padding-bottom: 3px;
+
   z-index: 1;
   pointer-events: none;
 }
