--- a/components/counter/src/styles/color.scss
+++ b/components/counter/src/styles/color.scss
@@ -6,8 +6,8 @@
 // ---------------------------------------------------------------------
 
 // Support for fallback values
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 .label {
   color: var(--ds-auro-counter-label-text-color);
@@ -35,25 +35,25 @@
 }
 
 [disabled], :host([disabled]) {
-  --ds-auro-counter-icon-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
-  --ds-auro-counter-description-text-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
-  --ds-auro-counter-label-text-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
-  --ds-auro-counter-quantity-text-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
+  --ds-auro-counter-icon-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
+  --ds-auro-counter-description-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
+  --ds-auro-counter-label-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
+  --ds-auro-counter-quantity-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
 }
 
 /* onDark styles */
 
 [onDark], :host([onDark]) {
-  --ds-auro-counter-description-text-color: var(--ds-basic-color-texticon-inverse-muted, #{$ds-basic-color-texticon-inverse-muted});
-  --ds-auro-counter-label-text-color: var(--ds-basic-color-texticon-inverse, #{$ds-basic-color-texticon-inverse});
-  --ds-auro-counter-quantity-text-color: var(--ds-basic-color-texticon-inverse, #{$ds-basic-color-texticon-inverse});
-  --ds-auro-counter-control-border-color: var(--ds-advanced-color-state-focused-inverse, #{$ds-advanced-color-state-focused-inverse});
-  --ds-auro-counter-control-background-color: var(--ds-advanced-color-button-tertiary-background-inverse, #{$ds-advanced-color-button-tertiary-background-inverse});
-  --ds-auro-counter-icon-color: var(--ds-advanced-color-button-tertiary-text-inverse, #{$ds-advanced-color-button-tertiary-text-inverse});
+  --ds-auro-counter-description-text-color: var(--ds-basic-color-texticon-inverse-muted, #{v.$ds-basic-color-texticon-inverse-muted});
+  --ds-auro-counter-label-text-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
+  --ds-auro-counter-quantity-text-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
+  --ds-auro-counter-control-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
+  --ds-auro-counter-control-background-color: var(--ds-advanced-color-button-tertiary-background-inverse, #{v.$ds-advanced-color-button-tertiary-background-inverse});
+  --ds-auro-counter-icon-color: var(--ds-advanced-color-button-tertiary-text-inverse, #{v.$ds-advanced-color-button-tertiary-text-inverse});
 }
 
 [onDark][disabled], :host([onDark][disabled]) {
-  --ds-auro-counter-label-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{$ds-basic-color-texticon-inverse-disabled});
-  --ds-auro-counter-quantity-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{$ds-basic-color-texticon-inverse-disabled});
-  --ds-auro-counter-icon-color: var(--ds-basic-color-texticon-inverse-disabled, #{$ds-basic-color-texticon-inverse-disabled});
+  --ds-auro-counter-label-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
+  --ds-auro-counter-quantity-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
+  --ds-auro-counter-icon-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
 }
