--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -4,8 +4,8 @@
 // ---------------------------------------------------------------------
 
 // Support for fallback values
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 /* stylelint-disable no-descending-specificity, selector-max-attribute, selector-nest-combinators */
 
@@ -24,7 +24,7 @@
   display: block;
 
   &::part(trigger) {
-    max-height: var(--ds-size-300, $ds-size-300);
+    max-height: var(--ds-size-300, #{vac.$ds-size-300});
   }
 }
 
