--- a/components/datepicker/src/styles/color-month.scss
+++ b/components/datepicker/src/styles/color-month.scss
@@ -4,10 +4,7 @@
 // ---------------------------------------------------------------------
 
 // Import Auro tokens
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
-
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints' as vb;
 @import '@aurodesignsystem/webcorestylesheets/src/core';
 
 
@@ -16,7 +13,7 @@
 }
 
 :host(:not(:last-of-type)) {
-  @include auro_grid-breakpoint--sm {
+  @include vb.auro_grid-breakpoint--sm {
     &:after {
       background-color: var(--ds-auro-calendar-month-divider-color);
     }
