--- a/components/datepicker/src/styles/color.scss
+++ b/components/datepicker/src/styles/color.scss
@@ -3,11 +3,10 @@
 
 /* stylelint-disable max-nesting-depth, declaration-no-important, selector-class-pattern, declaration-empty-line-before */
 
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
-@import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
 [auro-input] {
   &::part(wrapper) {
@@ -27,5 +26,5 @@
 }
 
 :host([onDark]) {
-  --ds-auro-datepicker-range-input-divider-color: var(--ds-basic-color-border-inverse, #{$ds-basic-color-border-inverse});
+  --ds-auro-datepicker-range-input-divider-color: var(--ds-basic-color-border-inverse, #{v.$ds-basic-color-border-inverse});
 }
