--- a/components/datepicker/src/styles/style-auro-calendar.scss
+++ b/components/datepicker/src/styles/style-auro-calendar.scss
@@ -3,8 +3,8 @@
 
 // // ---------------------------------------------------------------------
 
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
 /* stylelint-disable color-function-notation, at-rule-empty-line-before, order/properties-order, declaration-empty-line-before, declaration-block-no-duplicate-properties */
 
@@ -25,15 +25,15 @@
 
 .calendarNavButtons {
   position: absolute;
-  top: var(--ds-size-200, $ds-size-200);
-  right: var(--ds-size-50, $ds-size-50);
-  left: var(--ds-size-50, $ds-size-50);
+  top: var(--ds-size-200, vac.$ds-size-200);
+  right: var(--ds-size-50, vac.$ds-size-50);
+  left: var(--ds-size-50, vac.$ds-size-50);
 }
 
 .calendarNavBtn {
   display: flex;
-  width: var(--ds-size-500, $ds-size-500);
-  height: var(--ds-size-500, $ds-size-500);
+  width: var(--ds-size-500, vac.$ds-size-500);
+  height: var(--ds-size-500, vac.$ds-size-500);
 
   align-items: center;
   justify-content: center;
@@ -60,7 +60,7 @@
 }
 
 .headerActions {
-  padding: 0 var(--ds-size-200, $ds-size-200);
+  padding: 0 var(--ds-size-200, vac.$ds-size-200);
 }
 
 .mobileHeader {
@@ -80,20 +80,20 @@
   flex-direction: column;
   justify-content: center;
 
-  padding: 0 var(--ds-size-150, $ds-size-150) 0 var(--ds-size-200, $ds-size-200);
+  padding: 0 var(--ds-size-150, vac.$ds-size-150) 0 var(--ds-size-200, vac.$ds-size-200);
 }
 
 .mobileDateLabel {
-  font-size: var(--ds-basic-text-body-xs-font-size, $ds-basic-text-body-xs-font-size);
-  font-weight :var(--ds-basic-text-body-xs-font-weight, $ds-basic-text-body-xs-font-weight);
-  letter-spacing: var(--ds-basic-text-body-xs-letter-spacing, $ds-basic-text-body-xs-letter-spacing);
-  line-height: var(--ds-basic-text-body-xs-line-height, $ds-basic-text-body-xs-line-height);
+  font-size: 12px; // var(--ds-basic-text-body-xs-font-size, v.$ds-basic-text-body-xs-font-size);
+  font-weight: 450; // var(--ds-basic-text-body-xs-font-weight, v.$ds-basic-text-body-xs-font-weight);
+  letter-spacing: 0; // var(--ds-basic-text-body-xs-letter-spacing, v.$ds-basic-text-body-xs-letter-spacing);
+  line-height: 16px; // var(--ds-basic-text-body-xs-line-height, v.$ds-basic-text-body-xs-line-height);
 }
 
 .headerDateTo {
-  height: calc(var(--mobile-header-height) - var(--ds-size-300, $ds-size-300));
+  height: calc(var(--mobile-header-height) - var(--ds-size-300, vac.$ds-size-300));
 
-  padding: var(--ds-size-300, $ds-size-300) var(--ds-size-100, $ds-size-100) 0 var(--ds-size-200, $ds-size-200);
+  padding: var(--ds-size-300, vac.$ds-size-300) var(--ds-size-100, vac.$ds-size-100) 0 var(--ds-size-200, vac.$ds-size-200);
 }
 
 :host(:not([noRange])) {
@@ -113,7 +113,7 @@
 
       display: block;
       width: 1px;
-      height: var(--ds-size-300, $ds-size-300);
+      height: var(--ds-size-300, vac.$ds-size-300);
 
       content: '';
       transform: translateY(-50%);
@@ -136,13 +136,13 @@
   left: 50%;
 
   display: none;
-  width: calc(100% - calc(var(--ds-size-200, $ds-size-200) * 2));
+  width: calc(100% - calc(var(--ds-size-200, vac.$ds-size-200) * 2));
 
   align-items: flex-end;
   flex-direction: column;
   justify-content: flex-end;
 
-  padding: var(--ds-size-150) calc(var(--ds-size-200, $ds-size-200));
+  padding: var(--ds-size-150) calc(var(--ds-size-200, vac.$ds-size-200));
 
   transform: translateX(-50%);
 
