--- a/components/input/src/styles/default/notificationIcons.scss
+++ b/components/input/src/styles/default/notificationIcons.scss
@@ -1,5 +1,5 @@
 
-@use "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables" as v;
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 @use './mixins' as m;
 
 // Handles the hidden state of the notification icons
@@ -29,24 +29,24 @@
     align-items: center;
 
     [auro-icon] {
-      --ds-auro-icon-size: var(--ds-size-300, #{v.$ds-size-300});
+      --ds-auro-icon-size: var(--ds-size-300, #{vac.$ds-size-300});
       
-      height: var(--ds-size-300, #{v.$ds-size-300});
-      margin-right: var(--ds-size-100, #{v.$ds-size-100});
+      height: var(--ds-size-300, #{vac.$ds-size-300});
+      margin-right: var(--ds-size-100, #{vac.$ds-size-100});
     }
   }
 
   .notificationIcons {
     display: flex;
     flex-direction: row;
-    padding-right: var(--ds-size-100, #{v.$ds-size-100});
+    padding-right: var(--ds-size-100, #{vac.$ds-size-100});
   }
 }
 
 :host([class="layoutDefault"][bordered]),
 :host(:not([layout])[bordered]) {
   .typeIcon {
-    padding-left: var(--ds-size-100, #{v.$ds-size-100});
+    padding-left: var(--ds-size-100, #{vac.$ds-size-100});
   }
 
   .notificationIcons {
@@ -55,24 +55,24 @@
 
   .notification {
     &:not(:first-of-type) {
-      margin-left: var(--ds-size-100, #{v.$ds-size-100});
+      margin-left: var(--ds-size-100, #{vac.$ds-size-100});
     }
   }
 
   .alertNotification {
-    width: calc(var(--ds-size-300, #{v.$ds-size-300}) + var(--ds-size-25, #{v.$ds-size-25})); 
-    height: calc(var(--ds-size-300, #{v.$ds-size-300}) + var(--ds-size-25, #{v.$ds-size-25}));
+    width: calc(var(--ds-size-300, #{vac.$ds-size-300}) + var(--ds-size-25, #{vac.$ds-size-25})); 
+    height: calc(var(--ds-size-300, #{vac.$ds-size-300}) + var(--ds-size-25, #{vac.$ds-size-25}));
   }
 
   .passwordBtn {
-    width: calc(var(--ds-size-300, #{v.$ds-size-300}));
-    height: calc(var(--ds-size-300, #{v.$ds-size-300}));
+    width: calc(var(--ds-size-300, #{vac.$ds-size-300}));
+    height: calc(var(--ds-size-300, #{vac.$ds-size-300}));
   }
 
   .notificationBtn {
     display: block;
-    width: var(--ds-size-300, #{v.$ds-size-300});
-    height: var(--ds-size-300, #{v.$ds-size-300});
+    width: var(--ds-size-300, #{vac.$ds-size-300});
+    height: var(--ds-size-300, #{vac.$ds-size-300});
     padding: 0;
     border: 0;
     background: unset;
@@ -80,9 +80,9 @@
 
     [auro-icon] {
       display: block;
-      height: var(--ds-size-300, #{v.$ds-size-300});
+      height: var(--ds-size-300, #{vac.$ds-size-300});
 
-      --ds-auro-icon-size: var(--ds-size-300, #{#{v.$ds-size-300}});
+      --ds-auro-icon-size: var(--ds-size-300, #{#{vac.$ds-size-300}});
 
       &[hidden] {
         display: none;
@@ -96,7 +96,7 @@
   .typeIcon,
   .notificationIcons {
     align-items: flex-end;
-    padding-bottom: var(--ds-size-50, #{v.$ds-size-50});
+    padding-bottom: var(--ds-size-50, #{vac.$ds-size-50});
   }
 
   .clearBtn {
@@ -114,8 +114,8 @@
     &:hover,
     &:focus-within {
       .clearBtn {
-        width: calc(var(--ds-size-200, #{v.$ds-size-200}) + var(--ds-size-25, #{v.$ds-size-25})); 
-        height: calc(var(--ds-size-200, #{v.$ds-size-200}) + var(--ds-size-25, #{v.$ds-size-25}));
+        width: calc(var(--ds-size-200, #{vac.$ds-size-200}) + var(--ds-size-25, #{vac.$ds-size-25})); 
+        height: calc(var(--ds-size-200, #{vac.$ds-size-200}) + var(--ds-size-25, #{vac.$ds-size-25}));
         opacity: 1;
       }
     }
