--- a/components/layoutElement/src/styles/shapeSize.scss
+++ b/components/layoutElement/src/styles/shapeSize.scss
@@ -1,4 +1,6 @@
-@use '@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables' as v;
+@use '@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables' as vac;
+
+// TODO: Update all sizes to design tokens
 
 @function getCalculatedSize($size, $borderSize) {
   @return calc(#{$size} - (2 * #{$borderSize}));
@@ -66,7 +68,7 @@ $xs: 24px;
   max-height: 58px;
   border-style: solid;
   border-width: 1px;
-  border-radius: var(--ds-border-radius, #{v.$ds-border-radius});
+  border-radius: var(--ds-border-radius, #{vac.$ds-border-radius});
 
   @include variants(60px);
 }
