--- a/components/menu/src/styles/color-menuoption.scss
+++ b/components/menu/src/styles/color-menuoption.scss
@@ -5,9 +5,8 @@
 
 /* stylelint-disable custom-property-empty-line-before, declaration-no-important */
 
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
-
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
 :host {
   background-color: var(--ds-auro-menuoption-container-color);
@@ -19,22 +18,22 @@
 }
 
 :host([disabled]) {
-  --ds-auro-menuoption-text-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
+  --ds-auro-menuoption-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
 }
 
 :host(:hover),
 :host(.active) {
-  --ds-auro-menuoption-container-color: var(--ds-basic-color-surface-neutral-subtle, #{$ds-basic-color-surface-neutral-subtle});
+  --ds-auro-menuoption-container-color: var(--ds-basic-color-surface-neutral-subtle, #{v.$ds-basic-color-surface-neutral-subtle});
 }
 
 :host([selected]) {
-  --ds-auro-menuoption-container-color: var(--ds-advanced-color-state-selected, #{$ds-advanced-color-state-selected});
-  --ds-auro-menuoption-text-color: var(--ds-basic-color-texticon-inverse, #{$ds-basic-color-texticon-inverse});
-  --ds-auro-menuoption-icon-color: var(--ds-basic-color-texticon-inverse, #{$ds-basic-color-texticon-inverse});
+  --ds-auro-menuoption-container-color: var(--ds-advanced-color-state-selected, #{v.$ds-advanced-color-state-selected});
+  --ds-auro-menuoption-text-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
+  --ds-auro-menuoption-icon-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
 
   &:host(:hover),
   &:host(.active) {
-    --ds-auro-menuoption-container-color: var(--ds-advanced-color-state-selected-hover, #{$ds-advanced-color-state-selected-hover});
+    --ds-auro-menuoption-container-color: var(--ds-advanced-color-state-selected-hover, #{v.$ds-advanced-color-state-selected-hover});
   }
 }
 
