--- a/components/menu/src/styles/style-menu.scss
+++ b/components/menu/src/styles/style-menu.scss
@@ -6,10 +6,9 @@
 /* stylelint-disable declaration-empty-line-before */
 
 // Import Auro tokens
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
-@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
-@import '@aurodesignsystem/webcorestylesheets/src/core';
+@use '@aurodesignsystem/webcorestylesheets/src/core';
 
 /* stylelint-disable declaration-no-important, order/properties-order, selector-max-attribute, selector-no-qualifying-type, scss/selector-nest-combinators */
 
@@ -26,7 +25,7 @@
   ::slotted(auro-menuoption),
   ::slotted([auro-menuoption]),
   auro-menuoption[loadingplaceholder] {
-    padding-left: calc(var(--ds-size-150, $ds-size-150) + 24px + var(--ds-size-100, $ds-size-100));
+    padding-left: calc(var(--ds-size-150, vac.$ds-size-150) + 24px + var(--ds-size-100, vac.$ds-size-100));
   }
 
   ::slotted([selected]) {
@@ -41,7 +40,7 @@
 
     overflow: visible !important;
 
-    margin: var(--ds-size-100, $ds-size-100) 0 !important;
+    margin: var(--ds-size-100, vac.$ds-size-100) 0 !important;
 
     border-width: 0 !important;
     border-top-width: 1px !important;
@@ -52,7 +51,7 @@
 :host([nocheckmark]) {
   ::slotted(auro-menuoption),
   auro-menuoption[loadingplaceholder] {
-    padding-left: var(--ds-size-200, $ds-size-200);
+    padding-left: var(--ds-size-200, vac.$ds-size-200);
   }
 }
 
@@ -72,7 +71,7 @@
     display: inline-block;
 
     &::slotted(*) {
-      margin-right: var(--ds-size-150, $ds-size-150);
+      margin-right: var(--ds-size-150, vac.$ds-size-150);
     }
   }
 }
