--- a/components/menu/src/styles/style-menuoption.scss
+++ b/components/menu/src/styles/style-menuoption.scss
@@ -5,8 +5,8 @@
 
 /* stylelint-disable declaration-empty-line-before */
 
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 /* stylelint-disable declaration-no-important, order/properties-order */
 
@@ -15,7 +15,7 @@
 
   align-items: center;
 
-  padding: var(--ds-size-50, $ds-size-50) var(--ds-size-200, $ds-size-200) var(--ds-size-50, $ds-size-50) 0;
+  padding: var(--ds-size-50, vac.$ds-size-50) var(--ds-size-200, vac.$ds-size-200) var(--ds-size-50, vac.$ds-size-50) 0;
 
   cursor: pointer;
 
@@ -33,14 +33,14 @@
   }
 
   [auro-icon] {
-    --ds-auro-icon-size: var(--ds-size-300, #{$ds-size-300});
-    margin-right: var(--ds-size-150, $ds-size-150);
-    margin-left: var(--ds-size-100, $ds-size-100);
+    --ds-auro-icon-size: var(--ds-size-300, #{vac.$ds-size-300});
+    margin-right: var(--ds-size-150, vac.$ds-size-150);
+    margin-left: var(--ds-size-100, vac.$ds-size-100);
   }
 
   ::slotted(.nestingSpacer) {
     display: inline-block;
-    width: var(--ds-size-300, $ds-size-300);
+    width: var(--ds-size-300, vac.$ds-size-300);
   }
 
   ::slotted(strong) {
