--- a/components/radio/src/styles/style.scss
+++ b/components/radio/src/styles/style.scss
@@ -18,11 +18,11 @@
    rule-empty-line-before */
 
 // Import Auro tokens
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
-@import '@aurodesignsystem/webcorestylesheets/src/core';
-@import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+@use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+@use '@aurodesignsystem/webcorestylesheets/src/core';
+@use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
 :host {
   display: block;
@@ -41,7 +41,7 @@
   .rdoGroup {
     display: block;
 
-    padding-right: var(--ds-size-100, $ds-size-100);
+    padding-right: var(--ds-size-100, vac.$ds-size-100);
 
     outline: 3px solid transparent; // for Windows High Contrast mode
 
@@ -61,16 +61,16 @@
 .rdoGroup {
   position: relative;
 
-  padding-right: var(--ds-size-100, $ds-size-100);
-  padding-left: var(--ds-size-100, $ds-size-100);
+  padding-right: var(--ds-size-100, vac.$ds-size-100);
+  padding-left: var(--ds-size-100, vac.$ds-size-100);
 
-  line-height: var(--ds-size-400, $ds-size-400);
+  line-height: var(--ds-size-400, vac.$ds-size-400);
 }
 
 .label {
   display: block;
 
-  margin-left: var(--ds-size-300, $ds-size-300);
+  margin-left: var(--ds-size-300, vac.$ds-size-300);
 
   &:hover {
     cursor: pointer;
@@ -79,11 +79,11 @@
   &:after {
     position: absolute;
     z-index: 1;
-    top: var(--ds-size-200, $ds-size-200); // half of `.rdoGroup`'s line-height
-    left: var(--ds-size-50, $ds-size-50);
+    top: var(--ds-size-200, vac.$ds-size-200); // half of `.rdoGroup`'s line-height
+    left: var(--ds-size-50, vac.$ds-size-50);
 
-    width: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
-    height: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
+    width: calc(var(--ds-size-200, vac.$ds-size-200) + var(--ds-size-50, vac.$ds-size-50));
+    height: calc(var(--ds-size-200, vac.$ds-size-200) + var(--ds-size-50, vac.$ds-size-50));
     transform: translateY(-50%);
 
     content: '';
@@ -95,6 +95,6 @@
 
 .slotContent {
   display: block;
-  margin-left: var(--ds-size-400, $ds-size-400);
-  padding-left: var(--ds-size-100, $ds-size-100);
+  margin-left: var(--ds-size-400, vac.$ds-size-400);
+  padding-left: var(--ds-size-100, vac.$ds-size-100);
 }
