--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -4,11 +4,10 @@
 // ---------------------------------------------------------------------
 
 // Import Auro tokens
-@use '@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska' as v;
+@use '@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska' as v;
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 @use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
-@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
-// @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 // @import '@aurodesignsystem/webcorestylesheets/src/core';
 // @import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
@@ -46,7 +45,7 @@
 }
 
 ::slotted([slot="typeIcon"]) {
-  margin-right: 8px;
+  margin-right: 8px; // TODO: update to use design token
 }
 
 .displayValue {
@@ -66,7 +65,7 @@
   width: 100%;
   align-items: center;
   justify-content: center;
-  padding: 0 8px 0 24px;
+  padding: 0 8px 0 24px; // TODO: update to use design token
 }
 
 
@@ -77,7 +76,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    padding: 0 8px 0 24px;
+    padding: 0 8px 0 24px; // TODO: update to use design token
   }
 }
 
@@ -87,7 +86,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    padding: 0 8px 0 24px;
+    padding: 0 8px 0 24px; // TODO: update to use design token
   }
 }
 
